# claude_lldb_mcp

./: .gitignore  CLAUDE.md  README.md  claude_code_config.example.json  lldb_mcp_server.py  pyproject.toml  setup_for_copilot.sh  test_server.py
.github/workflows/: ci.yml
skills/: debug-cpp.skill
skills/debug-cpp/: SKILL.md
test_fixtures/: multifile_helper.cpp  multifile_helper.h  multifile_main.cpp  simple.cpp  test_mcp_breakpoints.py  test_mcp_integration.py  variables.cpp
tests/: test_environment.py
