[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lldb-mcp"
version = "0.1.1"
description = "MCP server for LLDB debugger integration with AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["lldb", "debugger", "mcp", "model-context-protocol", "claude"]
authors = [
    { name = "Benjamin Mastripolito", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
lldb-mcp = "lldb_mcp_server:mcp.run"

[project.urls]
Homepage = "https://github.com/benpm/lldb-mcp"
Documentation = "https://github.com/benpm/lldb-mcp#readme"
Repository = "https://github.com/benpm/lldb-mcp"
Issues = "https://github.com/benpm/lldb-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["."]
